<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/made_with"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tamber_labs"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/made_by"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/about_newsapi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/news_api"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/about_slack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/slack"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/about_freelogodesign"
        app:layout_constraintTop_toBottomOf="@+id/about_freelogodesign" />

    <TextView
        android:id="@+id/about_freelogodesign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/free_logo"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/about_newsapi"
        app:layout_constraintTop_toBottomOf="@+id/about_newsapi" />

    <TextView
        android:id="@+id/about_udacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/udacity"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/about_slack"
        app:layout_constraintTop_toBottomOf="@+id/about_slack" />

    <TextView
        android:id="@+id/about_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material_design"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/about_udacity"
        app:layout_constraintTop_toBottomOf="@+id/about_udacity" />

    <TextView
        android:id="@+id/about_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/github"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/about_material"
        app:layout_constraintTop_toBottomOf="@+id/about_material" />

    <TextView
        android:id="@+id/about_androidStudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/android_studio"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/about_github"
        app:layout_constraintTop_toBottomOf="@+id/about_github" />


</androidx.constraintlayout.widget.ConstraintLayout>